# SWPan

./: CMakeLists.txt  Codeword.cpp  Codeword.h  CodewordsExtractor.cpp  CodewordsExtractor.h  MatrixReader.cpp  MatrixReader.h  RangeSolver.cpp  RangeSolver.h  main.cpp
Algorithm/: Codeword.cpp  Codeword.h  Matrix.cpp  Matrix.h  OSD.cpp  OSD.h  SpectrumSolver.cpp  SpectrumSolver.h
Readers/: FileMatrixReader.cpp  FileMatrixReader.h  MatrixReader.cpp  MatrixReader.h
Tests/: Assert.cpp  Assert.h  CodewordsExtractorTest.cpp  CodewordsExtractorTest.h
Tests/Algorithm/: SpectrumSolverTest.cpp  SpectrumSolverTest.h
Tests/Readers/: MatrixReaderTest.cpp  MatrixReaderTest.h
Writers/: FileSpectrumWriter.cpp  FileSpectrumWriter.h  SpectrumWriter.cpp  SpectrumWriter.h
